# TalkingModel

./: .env.example  .gitignore  Launch.command  README.md  pyproject.toml  requirements.txt
TM-Engine/: requirements.txt  test_tts.py
TM-Engine/ENGINE/: launcher.py  main.py
TM-GGUF/: .gitattributes
config/: models.yaml
engine/: __init__.py  cli.py  launcher.py  main.py
scripts/: launch.bat  launch.sh  setup.bat  setup.sh  test_tts.py
utils/: __init__.py  model_manager.py  paths.py  startup_check.py
