[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "talking-model"
version = "1.0.0"
description = "Offline AI voice and text assistant powered by llama.cpp and Vosk STT"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ai", "voice-assistant", "llm", "llama-cpp", "vosk", "offline", "gguf"]

dependencies = [
    "llama-cpp-python>=0.3.16",
    "vosk>=0.3.44",
    "sounddevice>=0.5.1",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "huggingface-hub>=0.23.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# macOS native TTS support (installed automatically on macOS via setup.sh)
macos = ["pyobjc>=12.0"]
# Development / testing
dev = ["pytest>=8.0", "ruff>=0.4.0"]

[project.scripts]
# Allows running `talking-model` from the terminal after `pip install -e .`
talking-model = "engine.launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
